# unfold-rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  core.rs  logger.rs  main.rs  utils.rs
test/: 2.txt
unfold-cli/: Cargo.toml  package-lock.json
unfold-cli/src/: cli.rs  main.rs
unfold-core/: Cargo.toml
unfold-core/src/: cli.rs  lib.rs  logger.rs  utils.rs
unfold-gui/: RELEASE_NOTES.md  index.html  package-lock.json  package.json  vite.config.ts
unfold-gui/src/: App.css  App.tsx  styles.css
unfold-gui/src-tauri/: Cargo.toml  tauri.conf.json
unfold-gui/src-tauri/capabilities/: default.json
unfold-gui/src-tauri/icons/: icon.icns
unfold-gui/src-tauri/src/: main.rs
